--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="search flex item-center">
             <img class="invert" src="/SVG-S/home.svg" alt="home" width="30px">
-            <input type="text" id="search">
+            <input type="text" id="search" placeholder="Search....">
             <img class="invert" src="/SVG-S/search.svg" alt="search" width="25px">
         </div>
         <div class="logsign flex item-center just-center">
@@ -31,7 +31,14 @@
    <div class="container">
     <div class="left">
         <div class="lib-container">
-
+            <div class="head">
+                <div class="image-lib">
+                    <img src="/SVG-S/playlist.svg" alt="library">
+                </div>
+                <div class="lib-text">
+                    <p>Your Library</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="right">
@@ -42,8 +49,25 @@
    </div>
    <div class="playlist">
     <div class="playbar">
-        <img src="/SVG-S/nextbtn.svg" alt="">
+        <div class="name">
+            <p>-------- SONG NAME --------</p>
+        </div>
+        <div class="buttons">
+            <div class="back">
+                <img src="/SVG-S/back.svg" alt="backbtn">
+            </div>
+            <div class="play">
+                <img src="/SVG-S/play.svg" alt="playbtn">
+            </div>
+            <div class="next">
+                <img src="/SVG-S/nextbtn.svg" alt="nextbtn">
+            </div>
+        </div>
+        <div class="volume-time">
+            <p>------- Volume button --------</p>
+        </div>
     </div>
+    <div class="adjust"></div>
    </div>
     <script src="script.js"></script>
 </body>
