--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             <p>------- Volume button --------</p>
         </div>
     </div>
-    <div class="adjust"></div>
+    <div class="seekbar">
+        <div class="circle"></div>
+    </div>
    </div>
     <script src="script.js"></script>
 </body>
